--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 					<div class="welcome-aside">
 
 						<div class="welcome-social">
-							<a href="" class="social-link"><img src="/img/twitter.svg" alt="Twitter"></a>
-							<a href="" class="social-link"><img src="/img/inst.svg" alt="Inst"></a>
-							<a href="" class="social-link"><img src="/img/fb.svg" alt="Fb"></a>
+							<a href="" class="social-link"><img src="img/twitter.svg" alt="Twitter"></a>
+							<a href="" class="social-link"><img src="img/inst.svg" alt="Inst"></a>
+							<a href="" class="social-link"><img src="img/fb.svg" alt="Fb"></a>
 						</div>
 						<span class="social-text">
 							Follow us
